--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,32 @@
 p {
-  font-family: Lato;
+    font-family: Lato;
+}
+
+nav {
+    border-bottom: 1px solid #6ca3f9;
+    background-color: red;
+}
+
+.dropdown {
+    background-color: skyblue;
+    margin-left: 360%;
+    width: 100%;
+    height: 100%;
+}
+
+#text {
+    margin-left: 360%;
+    width: 100%;
+    height: 100%;
+}
+
+#text1 {
+    margin-left: 620%;
+}
+
+.b {
+    margin-top: 50px;
+    color: #ffff;
+    font-size: large;
+    margin-left: 44%;
 }
